--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,19 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    font-family: 'Roboto', sans-serif;
+}
 
 #root {
     height: 100vh;
     width: 100vw;
+    background-color: rgb(30 45 59);
 }
 
 header {
     height: 80px;
-    background-color: yellow;
+    background-color: rgb(46 58 70);
 }
 header img {
     height: calc(80px - 5px - 5px);
@@ -26,9 +30,26 @@ main #music-container {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     list-style: none;
-    background-color: blue;
 }
 main #music-container li {
     margin: 10px;
+    height: 310px;
+    width: calc((100% - (10px * 14)) / 7);
+    background-color: rgb(46 58 70);
+    text-align: center;
+}
+main #music-container img {
+    width: calc(100% - 15px - 15px);
+    margin: 15px 15px 0 15px;
+}
+main #music-container h3 {
+    margin: 10px;
+    color: white;
+    text-transform: uppercase;
+}
+main #music-container h4 {
+    margin: 10px;
+    color: gray;
 }
