--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ header img {
     height: calc(80px - 5px - 5px);
     margin-left: 10px;
     margin-top: 5px;
+    vertical-align: middle;
+}
+header #genre {
+    margin-left: 10px;
 }
 
 main #music-container {
